--- a/Flower WebSite/index.html
+++ b/Flower WebSite/index.html
@@ -105,6 +105,176 @@
     </section>
 
 
-    <script src=""></script>
+    <section class="products" id="products">
+
+        <h1 class="heading"> Latest <span>products</span> </h1>
+
+        <div class="box-container">
+
+            <div class="box">
+                <span class="discount">-10%</span>
+                <div class="image">
+                    <picture>
+                        <source src="img/1.webp" type="image/webp">
+                        <img src="img/1.png" alt="image">
+                    </picture>
+                    <div class="icons">
+                        <a href="#" class="fas fa-heart"></a>
+                        <a href="#" class="cart-btn">Add to cart</a>
+                        <a href="#" class="fas fa-share"></a>
+
+                    </div>
+                </div>
+                <div class="content">
+                    <h3>Flower pot</h3>
+                    <div class="price"> $12.99 <span>$15.99</span> </div>
+                </div>
+            </div>
+
+            <div class="box">
+                <span class="discount">-15%</span>
+                <div class="image">
+                    <picture>
+                        <source src="img/2.webp" type="image/webp">
+                        <img src="img/2.png" alt="image">
+                    </picture>
+                    <div class="icons">
+                        <a href="#" class="fas fa-heart"></a>
+                        <a href="#" class="cart-btn">Add to cart</a>
+                        <a href="#" class="fas fa-share"></a>
+
+                    </div>
+                </div>
+                <div class="content">
+                    <h3>Flower pot</h3>
+                    <div class="price"> $12.99 <span>$15.99</span> </div>
+                </div>
+            </div>
+
+            <div class="box">
+                <span class="discount">-5%</span>
+                <div class="image">
+                    <picture>
+                        <source src="img/3.webp" type="image/webp">
+                        <img src="img/3.png" alt="image">
+                    </picture>
+                    <div class="icons">
+                        <a href="#" class="fas fa-heart"></a>
+                        <a href="#" class="cart-btn">Add to cart</a>
+                        <a href="#" class="fas fa-share"></a>
+
+                    </div>
+                </div>
+                <div class="content">
+                    <h3>Flower pot</h3>
+                    <div class="price"> $12.99 <span>$15.99</span> </div>
+                </div>
+            </div>
+
+            <div class="box">
+                <span class="discount">-20%</span>
+                <div class="image">
+                    <picture>
+                        <source src="img/4.webp" type="image/webp">
+                        <img src="img/4.png" alt="image">
+                    </picture>
+                    <div class="icons">
+                        <a href="#" class="fas fa-heart"></a>
+                        <a href="#" class="cart-btn">Add to cart</a>
+                        <a href="#" class="fas fa-share"></a>
+
+                    </div>
+                </div>
+                <div class="content">
+                    <h3>Flower pot</h3>
+                    <div class="price"> $12.99 <span>$15.99</span> </div>
+                </div>
+            </div>
+
+            <div class="box">
+                <span class="discount">-15%</span>
+                <div class="image">
+                    <picture>
+                        <source src="img/5.webp" type="image/webp">
+                        <img src="img/5.png" alt="image">
+                    </picture>
+                    <div class="icons">
+                        <a href="#" class="fas fa-heart"></a>
+                        <a href="#" class="cart-btn">Add to cart</a>
+                        <a href="#" class="fas fa-share"></a>
+
+                    </div>
+                </div>
+                <div class="content">
+                    <h3>Flower pot</h3>
+                    <div class="price"> $12.99 <span>$15.99</span> </div>
+                </div>
+            </div>
+
+            <div class="box">
+                <span class="discount">-25%</span>
+                <div class="image">
+                    <picture>
+                        <source src="img/6.webp" type="image/webp">
+                        <img src="img/6.png" alt="image">
+                    </picture>
+                    <div class="icons">
+                        <a href="#" class="fas fa-heart"></a>
+                        <a href="#" class="cart-btn">Add to cart</a>
+                        <a href="#" class="fas fa-share"></a>
+
+                    </div>
+                </div>
+                <div class="content">
+                    <h3>Flower pot</h3>
+                    <div class="price"> $12.99 <span>$15.99</span> </div>
+                </div>
+            </div>
+
+            <div class="box">
+                <span class="discount">-7%</span>
+                <div class="image">
+                    <picture>
+                        <source src="img/7.webp" type="image/webp">
+                        <img src="img/7.png" alt="image">
+                    </picture>
+                    <div class="icons">
+                        <a href="#" class="fas fa-heart"></a>
+                        <a href="#" class="cart-btn">Add to cart</a>
+                        <a href="#" class="fas fa-share"></a>
+
+                    </div>
+                </div>
+                <div class="content">
+                    <h3>Flower pot</h3>
+                    <div class="price"> $12.99 <span>$15.99</span> </div>
+                </div>
+            </div>
+
+            <div class="box">
+                <span class="discount">-50%</span>
+                <div class="image">
+                    <picture>
+                        <source src="img/8.webp" type="image/webp">
+                        <img src="img/8.png" alt="image">
+                    </picture>
+                    <div class="icons">
+                        <a href="#" class="fas fa-heart"></a>
+                        <a href="#" class="cart-btn">Add to cart</a>
+                        <a href="#" class="fas fa-share"></a>
+
+                    </div>
+                </div>
+                <div class="content">
+                    <h3>Flower pot</h3>
+                    <div class="price"> $12.99 <span>$15.99</span> </div>
+                </div>
+            </div>
+
+
+        </div>
+
+    </section>
+
 </body>
 </html>
