--- a/Flower WebSite/index.html
+++ b/Flower WebSite/index.html
@@ -147,7 +147,7 @@
                 </div>
                 <div class="content">
                     <h3>Flower pot</h3>
-                    <div class="price"> $12.99 <span>$15.99</span> </div>
+                    <div class="price"> $22.99 <span>$28.99</span> </div>
                 </div>
             </div>
 
@@ -207,7 +207,7 @@
                 </div>
                 <div class="content">
                     <h3>Flower pot</h3>
-                    <div class="price"> $12.99 <span>$15.99</span> </div>
+                    <div class="price"> $25.99 <span>$30.99</span> </div>
                 </div>
             </div>
 
@@ -227,7 +227,7 @@
                 </div>
                 <div class="content">
                     <h3>Flower pot</h3>
-                    <div class="price"> $12.99 <span>$15.99</span> </div>
+                    <div class="price"> $16.99 <span>$15.99</span> </div>
                 </div>
             </div>
 
@@ -267,12 +267,78 @@
                 </div>
                 <div class="content">
                     <h3>Flower pot</h3>
-                    <div class="price"> $12.99 <span>$15.99</span> </div>
+                    <div class="price"> $10.99 <span>$15.99</span> </div>
                 </div>
             </div>
-
-
         </div>
+
+    </section>
+
+
+    <section class="review" id="review">
+        <h1 class="heading"> Customer's <span>review</span> </h1>
+
+    <div class="box-container">
+        <div class="box">
+            <div class="stars">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            </div>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis repellendus inventore sint quas adipisci natus hic iusto accusantium ipsum assumenda, temporibus, rerum fugiat eaque exercitationem quos distinctio impedit beatae sunt magni unde! Recusandae, molestiae facere, nostrum fuga, nam quia iusto ex repudiandae aut minima omnis dolorum vitae voluptatibus voluptatem dolor eos maiores adipisci quis at inventore aspernatur. Non hic aperiam omnis obcaecati, labore dignissimos corporis dolor porro? Neque, corrupti fugiat.</p>
+            <div class="user">
+                <img src="img/mujer1.png" alt="">
+                <div class="user-info">
+                    <h3>Larissa Clark</h3>
+                    <span>Happy Customer</span>
+                </div>
+            </div>
+            <span class="fas fa-quote-rigth"></span>
+        </div>
+
+
+        <div class="box">
+            <div class="stars">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            </div>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis repellendus inventore sint quas adipisci natus hic iusto accusantium ipsum assumenda, temporibus, rerum fugiat eaque exercitationem quos distinctio impedit beatae sunt magni unde! Recusandae, molestiae facere, nostrum fuga, nam quia iusto ex repudiandae aut minima omnis dolorum vitae voluptatibus voluptatem dolor eos maiores adipisci quis at inventore aspernatur. Non hic aperiam omnis obcaecati, labore dignissimos corporis dolor porro? Neque, corrupti fugiat.</p>
+            <div class="user">
+                <img src="img/mujer2.png" alt="">
+                <div class="user-info">
+                    <h3>Mirella Fran</h3>
+                    <span>Happy Customer</span>
+                </div>
+            </div>
+            <span class="fas fa-qoute-rigth"></span>
+        </div>
+
+
+        <div class="box">
+            <div class="stars">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            </div>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis repellendus inventore sint quas adipisci natus hic iusto accusantium ipsum assumenda, temporibus, rerum fugiat eaque exercitationem quos distinctio impedit beatae sunt magni unde! Recusandae, molestiae facere, nostrum fuga, nam quia iusto ex repudiandae aut minima omnis dolorum vitae voluptatibus voluptatem dolor eos maiores adipisci quis at inventore aspernatur. Non hic aperiam omnis obcaecati, labore dignissimos corporis dolor porro? Neque, corrupti fugiat.</p>
+            <div class="user">
+                <img src="img/hombre.png" alt="">
+                <div class="user-info">
+                    <h3>Fransisco Lou</h3>
+                    <span>Happy Customer</span>
+                </div>
+            </div>
+            <span class="fas fa-qoute-rigth"></span>
+        </div>
+</div>
+
+
 
     </section>
 
