--- a/Flower WebSite/index.html
+++ b/Flower WebSite/index.html
@@ -288,7 +288,7 @@
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
             </div>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis repellendus inventore sint quas adipisci natus hic iusto accusantium ipsum assumenda, temporibus, rerum fugiat eaque exercitationem quos distinctio impedit beatae sunt magni unde! Recusandae, molestiae facere, nostrum fuga, nam quia iusto ex repudiandae aut minima omnis dolorum vitae voluptatibus voluptatem dolor eos maiores adipisci quis at inventore aspernatur. Non hic aperiam omnis obcaecati, labore dignissimos corporis dolor porro? Neque, corrupti fugiat.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lint quas adipisci natus hic iusto ccusantium ipsum assumenda, temporibus, rerum fugiat eaque exercitationem quos distinctio impedit beatae sunt magni unde! Recusandae, molestiae facere, nostrum fuga, nam quia iusto ex repudiandae aut minima omnis dolorum vitae voluptatibus voluptatem dolor eos maiores adipisci quis at inventore aspernatur.</p>
             <div class="user">
                 <img src="img/mujer1.png" alt="">
                 <div class="user-info">
@@ -296,7 +296,7 @@
                     <span>Happy Customer</span>
                 </div>
             </div>
-            <span class="fas fa-quote-rigth"></span>
+            <span class="fa-quote-right"></span>
         </div>
 
 
@@ -308,7 +308,7 @@
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
             </div>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis repellendus inventore sint quas adipisci natus hic iusto accusantium ipsum assumenda, temporibus, rerum fugiat eaque exercitationem quos distinctio impedit beatae sunt magni unde! Recusandae, molestiae facere, nostrum fuga, nam quia iusto ex repudiandae aut minima omnis dolorum vitae voluptatibus voluptatem dolor eos maiores adipisci quis at inventore aspernatur. Non hic aperiam omnis obcaecati, labore dignissimos corporis dolor porro? Neque, corrupti fugiat.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis repellendus inventore sint quas adipisci natus hic iusto.</p>
             <div class="user">
                 <img src="img/mujer2.png" alt="">
                 <div class="user-info">
@@ -316,7 +316,7 @@
                     <span>Happy Customer</span>
                 </div>
             </div>
-            <span class="fas fa-qoute-rigth"></span>
+            <span class="fa-quote-right"></span>
         </div>
 
 
@@ -327,7 +327,7 @@
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
             </div>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis repellendus inventore sint quas adipisci natus hic iusto accusantium ipsum assumenda, temporibus, rerum fugiat eaque exercitationem quos distinctio impedit beatae sunt magni unde! Recusandae, molestiae facere, nostrum fuga, nam quia iusto ex repudiandae aut minima omnis dolorum vitae voluptatibus voluptatem dolor eos maiores adipisci quis at inventore aspernatur. Non hic aperiam omnis obcaecati, labore dignissimos corporis dolor porro? Neque, corrupti fugiat.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis repellendus inventore sunt magni undomnis dolorum vitae voluptatibus voluptatem dolor eos maiores adipisci quis at inventore aspernatur. Non hic aperiam omnis obcaecati, labore dignissimos corporis dolor porro? Neque, corrupti fugiat.</p>
             <div class="user">
                 <img src="img/hombre.png" alt="">
                 <div class="user-info">
@@ -335,7 +335,7 @@
                     <span>Happy Customer</span>
                 </div>
             </div>
-            <span class="fas fa-qoute-rigth"></span>
+            <span class="fa-quote-right"></span>
         </div>
 </div>
 
