--- a/Flower WebSite/index.html
+++ b/Flower WebSite/index.html
@@ -288,7 +288,7 @@
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
             </div>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lint quas adipisci natus hic iusto ccusantium ipsum assumenda, temporibus, rerum fugiat eaque exercitationem quos distinctio impedit beatae sunt magni unde! Recusandae, molestiae facere, nostrum fuga, nam quia iusto ex repudiandae aut minima omnis dolorum vitae voluptatibus voluptatem dolor eos maiores adipisci quis at inventore aspernatur.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id labore, neque laborum tempore nostrum recusandae quis optio possimus eius ea!</p>
             <div class="user">
                 <img src="img/mujer1.png" alt="">
                 <div class="user-info">
@@ -296,7 +296,6 @@
                     <span>Happy Customer</span>
                 </div>
             </div>
-            <span class="fa-quote-right"></span>
         </div>
 
 
@@ -308,7 +307,7 @@
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
             </div>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis repellendus inventore sint quas adipisci natus hic iusto.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id labore, neque laborum tempore nostrum recusandae quis optio possimus eius ea!</p>
             <div class="user">
                 <img src="img/mujer2.png" alt="">
                 <div class="user-info">
@@ -316,7 +315,6 @@
                     <span>Happy Customer</span>
                 </div>
             </div>
-            <span class="fa-quote-right"></span>
         </div>
 
 
@@ -327,7 +325,7 @@
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
             </div>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis repellendus inventore sunt magni undomnis dolorum vitae voluptatibus voluptatem dolor eos maiores adipisci quis at inventore aspernatur. Non hic aperiam omnis obcaecati, labore dignissimos corporis dolor porro? Neque, corrupti fugiat.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id labore, neque laborum tempore nostrum recusandae quis optio possimus eius ea!</p>
             <div class="user">
                 <img src="img/hombre.png" alt="">
                 <div class="user-info">
@@ -335,11 +333,73 @@
                     <span>Happy Customer</span>
                 </div>
             </div>
-            <span class="fa-quote-right"></span>
         </div>
 </div>
+    </section>
+
+    <section class="contact" id="contact">
+
+        <h1 class="heading"> <span> contact </span> us </h1>
+
+        <div class="row">
+            <form action="">
+                <input type="text" placeholder="Name" class="box">
+                <input type="text" placeholder="Email" class="box">
+                <input type="text" placeholder="Number" class="box">
+                <textarea name="" id="" cols="20" rows="10" class="box" placeholder="message"></textarea>
+                <input type="submit" value="sen message" class="btn">
+            </form>
+
+            <div class="image">
+                <img src="img/contact us 2.jpg" alt="">
+            </div>
+
+        </div>
+
+    </section>
 
 
+    <section class="footer">
+        <div class="box-container">
+
+            <div class="box">
+                <h3>Quick links</h3>
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Products</a>
+                <a href="#">Review</a>
+                <a href="#">Home</a>
+            </div>
+
+            <div class="box">
+                <h3>Extra links</h3>
+                <a href="#">My account</a>
+                <a href="#">my favorite</a>
+            </div>
+
+            <div class="box">
+                <h3>Locations</h3>
+                <a href="#">Colombia</a>
+                <a href="#">USA</a>
+                <a href="#">Japan</a>
+                <a href="#">South Corea</a>
+                <a href="#">France</a>
+            </div>
+
+            <div class="box">
+                <h3>Contact info</h3>
+                <a href="#">+123-456-789</a>
+                <a href="#">maria@gmail.com</a>
+                <a href="#">Santa Marta, Colombia</a>
+            </div>
+
+        </div>
+
+        <div class="credit">
+            created by <span> María Camila Mercado Payares </span> | all rights reserved |
+        </div>
+
+    
 
     </section>
 
