--- a/Flower WebSite/index.html
+++ b/Flower WebSite/index.html
@@ -20,8 +20,8 @@
 
         <nav class="navbar">
             <a href="#home">Home</a>
-            <a href="about">About</a>
-            <a href="products">Products</a>
+            <a href="#about">About</a>
+            <a href="#products">Products</a>
             <a href="#review">Review</a>
             <a href="#contact">Contact</a>
         </nav>
